--- a/playpart.html
+++ b/playpart.html
@@ -69,5 +69,25 @@
       Do you think so? Do you think they would forget their mother if she went
       away altogether?
     </p>
+    <br>
+    <table border="1" class="table-play">
+        <thead>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>NORA</td>
+                <td>Surya</td>
+                <td>Aadi</td>
+            </tr>
+            <tr></tr>
+                <td>NURSE</td>
+                <td>Sai pallavi</td>
+                <td>Samantha</td>
+            </tr>
+        </thead>
+    </table>
   </body>
 </html>
