added new page and modified readme.md

--- a/playpart.html
+++ b/playpart.html
@@ -5,7 +5,6 @@
   <body>
     <h1>sangeetha baddam - acts in a play</h1>
     <h3>A Doll's House Act 2 - Henrik Ibsen</h3>
-    <p></p>
     <h5 class="NURSE name">NURSE.</h5>
     <p class="speech">At last I have found the box with the fancy dress.</p>
 
@@ -89,5 +88,7 @@
             </tr>
         </thead>
     </table>
+    <br>
+    <a href="secondact.html">Link to secondact page</a>
   </body>
 </html>
