--- a/secondact.html
+++ b/secondact.html
@@ -30,5 +30,15 @@
     <p class="speech">Not been nibbling sweets?</p>
     <br>
     <a href="playpart.html">Link to playpart.html</a>
+    <br>
+    <p>Bonus Task</p>
+    <br>
+    <img class="image" src="./images/DollsAct2.jpg" alt="DollsAct2"/>
+    <div>
+        <ul>
+            <li><a href="playpart.html">↻ play Page</a></li>
+            <li><a href="secondact.html">second Page ↺</a></li>
+        </ul>
+    </div>
   </body>
 </html>
