--- a/playpart.html
+++ b/playpart.html
@@ -90,5 +90,15 @@
     </table>
     <br>
     <a href="secondact.html">Link to secondact page</a>
+    <br>
+    <p>Bonus Task</p>
+    <br>
+    <img class="image" src="./images/DollsAct2.jpg" alt="DollsAct2"/>
+    <div>
+        <ul>
+            <li><a href="playpart.html">↻ play Page</a></li>
+            <li><a href="secondact.html">second Page ↺</a></li>
+        </ul>
+    </div>
   </body>
 </html>
