--- a/playpart.html
+++ b/playpart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>This is my lab-04</title>
-  <link rel="stylesheet" href="ibsen.css"/>
+  <link rel="stylesheet" href="ibsen.css" />
   <body>
     <h1>sangeetha baddam - acts in a play</h1>
     <h3>A Doll's House Act 2 - Henrik Ibsen</h3>
@@ -68,37 +68,42 @@
       Do you think so? Do you think they would forget their mother if she went
       away altogether?
     </p>
-    <br>
+    <br />
     <table border="1" class="table-play">
-        <thead>
-            <tr>
-                <th>Character</th>
-                <th>Actor</th>
-                <th>Understudy</th>
-            </tr>
-            <tr>
-                <td>NORA</td>
-                <td>Surya</td>
-                <td>Aadi</td>
-            </tr>
-            <tr></tr>
-                <td>NURSE</td>
-                <td>Sai pallavi</td>
-                <td>Samantha</td>
-            </tr>
-        </thead>
+      <thead>
+        <tr>
+          <th>Character</th>
+          <th>Actor</th>
+          <th>Understudy</th>
+        </tr>
+        <tr>
+          <td>NORA</td>
+          <td>Surya</td>
+          <td>Aadi</td>
+        </tr>
+        <tr>
+          <td>NURSE</td>
+          <td>Sai pallavi</td>
+          <td>Samantha</td>
+        </tr>
+        <tr>
+          <td>Super man</td>
+          <td>Christopher Reeve</td>
+          <td>Cavill Henry</td>
+        </tr>
+      </thead>
     </table>
-    <br>
+    <br />
     <a href="secondact.html">Link to secondact page</a>
-    <br>
+    <br />
     <p>Bonus Task</p>
-    <br>
-    <img class="image" src="./images/DollsAct2.jpg" alt="DollsAct2"/>
+    <br />
+    <img class="image" src="./images/DollsAct2.jpg" alt="DollsAct2" />
     <div>
-        <ul>
-            <li><a href="playpart.html">↻ play Page</a></li>
-            <li><a href="secondact.html">second Page ↺</a></li>
-        </ul>
+      <ul>
+        <li><a href="playpart.html">↻ play Page</a></li>
+        <li><a href="secondact.html">second Page ↺</a></li>
+      </ul>
     </div>
   </body>
 </html>
